syntax = "proto3";
package test_suite_api;

// NOTE: It sucks that we have this Go-specific logic inside this file (which should be language-agnostic). However, the Protobuf team have
// taken a hard stance on this being the way it should be done, so we have to do it this way.
option go_package = "github.com/kurtosis-tech/kurtosis-testsuite-api-lib/golang/kurtosis_testsuite_rpc_api_bindings";

import "google/protobuf/empty.proto";

service TestSuiteService {
  // Endpoint to verify the gRPC server is actually up before making any real calls
  rpc IsAvailable(google.protobuf.Empty) returns (google.protobuf.Empty) {};

  rpc GetTestSuiteMetadata(google.protobuf.Empty) returns (TestSuiteMetadata) {};

  // Will be called by the test initializer container, telling the testsuite container to register static files & files artifacts
  //  so that they're available in the API container before the tests start running
  rpc RegisterFiles(RegisterFilesArgs) returns (google.protobuf.Empty) {};

  rpc SetupTest(SetupTestArgs) returns (google.protobuf.Empty) {};

  rpc RunTest(RunTestArgs) returns (google.protobuf.Empty) {};
}

// ====================================================================================================
//                                       GetTestSuiteMetadata
// ====================================================================================================
message TestSuiteMetadata {
  // Mapping of testName -> testMetadata
  map<string, TestMetadata> test_metadata = 1;

  uint32 network_width_bits = 2;
}

message TestMetadata {
  bool is_partitioning_enabled = 1;

  uint32 test_setup_timeout_in_seconds = 2;

  uint32 test_run_timeout_in_seconds = 3;
}

// ====================================================================================================
//                                           Register Files
// ====================================================================================================
message RegisterFilesArgs {
  string test_name = 1;
}


// ====================================================================================================
//                                             Setup Test
// ====================================================================================================
message SetupTestArgs {
  string test_name = 1;
}


// ====================================================================================================
//                                              Run Test
// ====================================================================================================
message RunTestArgs {
  string test_name = 1;
}
